--- a/MeuSite/site.css
+++ b/MeuSite/site.css
@@ -1,15 +1,58 @@
 h1 {
 	background-color:#851944;
+	border-bottom: 10px solid #000000;
 	color: #FFF;
 	text-align: center;
 	font-family: "Arial";
+	padding-top: 25px;
+	padding-right: 25px;
+	padding-bottom: 25px;
+	padding-left: 25px;
 }
 
 h2 {
 	font-family: "Arial";
+	background-color:#3C1D3D;
+	text-align: center;
+	color: #F2FFFC;
 }
 
 p {
 	text-algin: justify;
 	font-family: "Calibri";
 }
+
+blockquote {
+	background-color:#D9E5E3;
+	display: block;
+	border: 10px solid #C2CCCA;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	margin-left: 40px;
+	margin-right: 40px;
+	padding-top: 20px;
+	padding-right: 20px;
+	padding-bottom: 20px;
+	padding-left: 20px;
+}
+
+aside {
+	background-color:#3C1D3D;
+	color: #F2FFFC;
+	text-align: center;
+	font-family: "Arial";
+}
+
+
+footer {
+	background-color:#000000;
+	color: #F2FFFC;
+}
+
+div {
+	width: 720px;
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+
